implement selecting project

--- a/projects.json
+++ b/projects.json
@@ -1,1 +1,1 @@
-{"projects": {"testproject1": ["point 1", "point 2", "point 3"], "hehehehehe": [], "booba": [], "bigtime": [], "wooooooooooo": []}}
+{"projects": {"testproject1": ["point 1", "point 2", "point 3"], "hehehehehe": [], "booba": ["hello"], "bigtime": [], "wooooooooooo": []}}
